project/logs/20250801_095808.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3d.VS.hlsl, profile:vs_6_0

Object3d.VS.hlsl:24:39: error: use of undeclared identifier 'inverse'
    float3x3 normalMatrix = transpose(inverse((float3x3) gTransformaitionMatrix.World));
                                      ^
Object3d.VS.hlsl:26:14: error: redefinition of 'normalMatrix'
    float3x3 normalMatrix = transpose((float3x3) inverse(world));
             ^
Object3d.VS.hlsl:24:14: note: previous definition is here
    float3x3 normalMatrix = transpose(inverse((float3x3) gTransformaitionMatrix.World));
             ^
Object3d.VS.hlsl:26:50: error: use of undeclared identifier 'inverse'
    float3x3 normalMatrix = transpose((float3x3) inverse(world));
                                                 ^

